--- a/class/index.html
+++ b/class/index.html
@@ -6,7 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>rajendra</h1>
-    <p>This is p tag</p>
+    <h1>My name is Rajendra jangid</h1>
 </body>
 </html>
