--- a/assignment1.html
+++ b/assignment1.html
@@ -28,33 +28,26 @@
         const fun = async () => {
             const response = await fetch("https://api-v1.com/v1/liveMatches2.php")
             const jsonresponse = await response.json()
-            // console.log(jsonresponse["NZR"])
-            console.log(Object.values(jsonresponse));
-
+            let arr = Object.values(jsonresponse);
+            for (let i = 0; i < arr.length; i++) {
+                //loop
+                let htmlcode = `<h2 style="font-family: Arial, Helvetica, sans-serif;">IND vs SL 2024</h2>
+                <p>3rd T20 Pallekele International Cricket Stadium, Pallekele </p>
+                <div>
+                    <div class="image" style="display: flex;">
+                        <img src='https://cricketvectors.akamaized.net/Teams/${arr[i]["b"]}.png?impolicy=default_web' alt="India logo" id="data2">
+                        <p id="data1">IND 4/0 & 137/9 </p>
+                        <p>20.0</p>
+                        </div>
+                        <div class='image' style="display: flex;">
+                            <img src='https://cricketvectors.akamaized.net/Teams/${arr[i]["c"]}.png?impolicy=default_web' alt="Sri Lanka logo" id="data3">
+                            <p>SL 2/2 & 137/8 20.0</p>
+                            </div>
+                            <p style="color: green;">SL won in Super Over</p>
+                            </div>`
+                document.getElementsByClassName("main")[0].innerHTML += htmlcode
+            }
             //loop
-            let htmlcode = `<h2 style="font-family: Arial, Helvetica, sans-serif;">IND vs SL 2024</h2>
-        <p>3rd T20 Pallekele International Cricket Stadium, Pallekele </p>
-        <div>
-            <div class="image" style="display: flex;">
-                <img src='https://cricketvectors.akamaized.net/Teams/${jsonresponse["NZR"]["b"]}.png?impolicy=default_web' alt="India logo" id="data2">
-                <p id="data1">IND 4/0 & 137/9 </p>
-                <p>20.0</p>
-            </div>
-            <div class='image' style="display: flex;">
-                <img src='https://cricketvectors.akamaized.net/Teams/${jsonresponse["NZR"]["c"]}.png?impolicy=default_web' alt="Sri Lanka logo" id="data3">
-                <p>SL 2/2 & 137/8 20.0</p>
-            </div>
-            <p style="color: green;">SL won in Super Over</p>
-        </div>`
-            document.getElementsByClassName("main")[0].innerHTML = htmlcode
-            //loop
-            
-            // let str = jsonresponse["a"]
-            // let image1 = (str.length == 3)?str.slice(0,1):str.slice(0,2) //ternary opr
-            // let image2 = (str.length == 3)?str.slice(2,3):str.slice(3,5) //ternary opr
-            // document.getElementById("data1").innerText = jsonresponse["j"]
-            // document.getElementById("data2").src = `https://cricketvectors.akamaized.net/Teams/${jsonresponse["NZR"]["b"]}.png?impolicy=default_web`
-            // document.getElementById("data3").src = `https://cricketvectors.akamaized.net/Teams/${jsonresponse["NZR"]["c"]}.png?impolicy=default_web`
         }
         fun()
     </script>
